--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: 1.20
     
     - name: Restore all Go modules
-      run: go mod download
+      run: go get ./...
     
     - name: Build
       run: go build -v ./...
