--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,10 +19,10 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.20
+        go-version: 1.20.x
     
     - name: Restore all Go modules
-      run: go get ./...
+      run: go mod download
     
     - name: Build
       run: go build -v ./...
